--- a/devjam.css
+++ b/devjam.css
@@ -224,10 +224,16 @@
     border-radius: 10px;
 }
 
-.problemStatementPopUpDivHeader{
+.problemStatementPopUpDivHeader {
     padding: 1rem 1rem 0 1rem;
 }
 
-#problemStatementPopUpDivP{
+#problemStatementPopUpDivP {
     padding: 1rem;
+}
+
+.registerButton {
+    margin: auto;
+    display: block;
+    text-align: center;
 }
